        makes the function consistent with Variables '#var' and hash tables '#hashvalue'.
      + '#arraymerge', '#arrayunion', '#arraydiff' and '#arrayintersect' with only one array for
        the operation will make a copy of that array instead of creating no array at all.
      + Default separator for '#arrayprint' now is the languages default separator instead of ', '.
      + See 1.4 alpha for previous changes
    - '#arraydefine' option 'print' no longer supports 'print=print' and parameters beyond options.
      This functionality never worked reliably anyways. 'print=list' still works.
    - '#arrayprint' now has a new parameter for options. Option 'print=pretty' will print a list where
      the last two strings are chained with an ' and ' or the local languages equivalent. 'print=pretty'
      also can be used as option within '#arraydefine'.
    - If 'Regex Fun' extension is installed, '#arraysearcharray' can use Regex Funs 'e' flag feature
      for transforming the result and at the same time parsing them after each back-reference inclusion.
    - 1.4 alpha bug solved, '#arraysearcharray' with empty string as start index was interpreted as 0
    - class 'ArrayExtension' renamed to 'ExtArrays'


 * November 20, 2001 -- Version 1.4 alpha (r103716)
    This release introduces some useful bugfixes and optional new behavior for various functionality.
    This version never made it into a final stage because version 2.0 will introduce some rather
    radical changes, so this alpha release allows to profit from bugfixes that might be quite useful
    if you don't want to use Version 2.0 for some reason.
    - Configuration variable '$egArrayExtensionCompatbilityMode' for deactivating the following newly
      introduced breaking changes:
      + '#arrayprint' no longer returns an error text in case the array doesn't exist.
      + '#arrayreset' now uses n parameters instead of ',' as separator for n arrays to reset